refactor: (#39) move optional and collection boundaries to JDK