@@ -1,5 +1,19 @@
 package io.pillopl.library.lending.dailysheet.infrastructure;
 
+import static java.sql.Timestamp.from;
+
+import java.sql.Timestamp;
+import java.time.Instant;
+import java.util.List;
+import java.util.Map;
+import java.util.UUID;
+
+import org.springframework.context.event.EventListener;
+import org.springframework.dao.DuplicateKeyException;
+import org.springframework.jdbc.core.ColumnMapRowMapper;
+import org.springframework.jdbc.core.JdbcTemplate;
+import org.springframework.transaction.annotation.Transactional;
+
 import io.pillopl.library.catalogue.BookId;
 import io.pillopl.library.lending.dailysheet.model.CheckoutsToOverdueSheet;
 import io.pillopl.library.lending.dailysheet.model.DailySheet;
@@ -14,22 +28,6 @@ import io.pillopl.library.lending.patron.model.PatronEvent.BookHoldExpired;
 import io.pillopl.library.lending.patron.model.PatronEvent.BookPlacedOnHold;
 import io.pillopl.library.lending.patron.model.PatronEvent.BookReturned;
 import io.pillopl.library.lending.patron.model.PatronId;
-import io.vavr.control.Option;
-import org.springframework.context.event.EventListener;
-import org.springframework.dao.DuplicateKeyException;
-import org.springframework.jdbc.core.ColumnMapRowMapper;
-import org.springframework.jdbc.core.JdbcTemplate;
-import org.springframework.transaction.annotation.Transactional;
-
-import java.sql.Timestamp;
-import java.time.Instant;
-import java.util.List;
-import java.util.Map;
-import java.util.UUID;
-
-import static io.vavr.collection.List.ofAll;
-import static java.sql.Timestamp.from;
-import static java.util.stream.Collectors.toList;
 
 class SheetsReadModel implements DailySheet {
 
@@ -41,18 +39,15 @@ class SheetsReadModel implements DailySheet {
 
     @Override
     public HoldsToExpireSheet queryForHoldsToExpireSheet(Instant processingTime) {
-        return new HoldsToExpireSheet(ofAll(
-                findHoldsToExpire(processingTime)
-                        .stream()
-                        .map(this::toExpiredHold)
-                        .collect(toList())));
+        return new HoldsToExpireSheet(
+                findHoldsToExpire(processingTime).stream().map(this::toExpiredHold).toList());
     }
 
     private List<Map<String, Object>> findHoldsToExpire(Instant processingTime) {
         return sheets.query(
                 "SELECT h.book_id, h.hold_by_patron_id, h.hold_at_branch FROM holds_sheet h WHERE h.status = 'ACTIVE' and h.hold_till <= ?",
-                new Object[]{from(processingTime)},
-                new ColumnMapRowMapper());
+                new ColumnMapRowMapper(),
+                from(processingTime));
     }
 
     private ExpiredHold toExpiredHold(Map<String, Object> map) {
@@ -64,18 +59,17 @@ class SheetsReadModel implements DailySheet {
 
     @Override
     public CheckoutsToOverdueSheet queryForCheckoutsToOverdue(Instant processingTime) {
-        return new CheckoutsToOverdueSheet(ofAll(
-                findCheckoutsToOverdue(processingTime)
-                        .stream()
+        return new CheckoutsToOverdueSheet(
+                findCheckoutsToOverdue(processingTime).stream()
                         .map(this::toOverdueCheckout)
-                        .collect(toList())));
+                        .toList());
     }
 
     private List<Map<String, Object>> findCheckoutsToOverdue(Instant processingTime) {
         return sheets.query(
                 "SELECT c.book_id, c.checked_out_by_patron_id, c.checked_out_at_branch FROM checkouts_sheet c WHERE c.status = 'CHECKEDOUT' and c.checkout_till <= ?",
-                new Object[]{from(processingTime)},
-                new ColumnMapRowMapper());
+                new ColumnMapRowMapper(),
+                from(processingTime));
     }
 
     private OverdueCheckout toOverdueCheckout(Map<String, Object> map) {
@@ -92,37 +86,50 @@ class SheetsReadModel implements DailySheet {
         try {
             createNewHold(event);
         } catch (DuplicateKeyException ex) {
-            //idempotent operation
+            // idempotent operation
         }
     }
 
     private void createNewHold(BookPlacedOnHold event) {
-        sheets.update("INSERT INTO holds_sheet " +
-                        "(book_id, status, hold_event_id, hold_by_patron_id, hold_at, hold_till, expired_at, canceled_at, hold_at_branch, checked_out_at) VALUES " +
-                        "(?, ?, ?, ?, ?, ?, null, null, ?, null)",
+        sheets.update(
+                """
+                INSERT INTO holds_sheet (
+                    book_id,
+                    status,
+                    hold_event_id,
+                    hold_by_patron_id,
+                    hold_at,
+                    hold_till,
+                    expired_at,
+                    canceled_at,
+                    hold_at_branch,
+                    checked_out_at
+                ) VALUES (?, ?, ?, ?, ?, ?, null, null, ?, null)
+                """,
                 event.getBookId(),
                 "ACTIVE",
                 event.getEventId(),
                 event.getPatronId(),
                 from(event.getWhen()),
-                Option.of(event.getHoldTill()).map(Timestamp::from).getOrNull(),
+                event.getHoldTill() == null ? null : Timestamp.from(event.getHoldTill()),
                 event.getLibraryBranchId());
     }
 
     @Override
     @EventListener
     public void handle(BookHoldExtended event) {
-        sheets.update("UPDATE holds_sheet SET hold_till = ? WHERE status = 'ACTIVE' AND book_id = ? AND hold_by_patron_id = ? AND hold_at_branch = ?",
+        sheets.update(
+                "UPDATE holds_sheet SET hold_till = ? WHERE status = 'ACTIVE' AND book_id = ? AND hold_by_patron_id = ? AND hold_at_branch = ?",
                 from(event.getHoldTill()),
                 event.getBookId(),
                 event.getPatronId(),
                 event.getLibraryBranchId());
     }
 
-
     @Override
     public void handle(BookHoldCanceled event) {
-        sheets.update("UPDATE holds_sheet SET canceled_at = ?, status = 'CANCELED' WHERE canceled_at IS NULL AND book_id = ? AND hold_by_patron_id = ?",
+        sheets.update(
+                "UPDATE holds_sheet SET canceled_at = ?, status = 'CANCELED' WHERE canceled_at IS NULL AND book_id = ? AND hold_by_patron_id = ?",
                 from(event.getWhen()),
                 event.getBookId(),
                 event.getPatronId());
@@ -131,7 +138,8 @@ class SheetsReadModel implements DailySheet {
     @Override
     @EventListener
     public void handle(BookHoldExpired event) {
-        sheets.update("UPDATE holds_sheet SET expired_at = ?, status = 'EXPIRED' WHERE expired_at IS NULL AND book_id = ? AND hold_by_patron_id = ?",
+        sheets.update(
+                "UPDATE holds_sheet SET expired_at = ?, status = 'EXPIRED' WHERE expired_at IS NULL AND book_id = ? AND hold_by_patron_id = ?",
                 from(event.getWhen()),
                 event.getBookId(),
                 event.getPatronId());
@@ -143,14 +151,24 @@ class SheetsReadModel implements DailySheet {
         try {
             createNewCheckout(event);
         } catch (DuplicateKeyException ex) {
-            //idempotent operation
+            // idempotent operation
         }
     }
 
     private void createNewCheckout(BookCheckedOut event) {
-        sheets.update("INSERT INTO checkouts_sheet " +
-                        "(book_id, status, checkout_event_id, checked_out_by_patron_id, checked_out_at, checkout_till, checked_out_at_branch, returned_at) VALUES " +
-                        "(?, ?, ?, ?, ?, ?, ?, null)",
+        sheets.update(
+                """
+                INSERT INTO checkouts_sheet (
+                    book_id,
+                    status,
+                    checkout_event_id,
+                    checked_out_by_patron_id,
+                    checked_out_at,
+                    checkout_till,
+                    checked_out_at_branch,
+                    returned_at
+                ) VALUES (?, ?, ?, ?, ?, ?, ?, null)
+                """,
                 event.getBookId(),
                 "CHECKEDOUT",
                 event.getEventId(),
@@ -158,7 +176,8 @@ class SheetsReadModel implements DailySheet {
                 from(event.getWhen()),
                 from(event.getTill()),
                 event.getLibraryBranchId());
-        sheets.update("UPDATE holds_sheet SET checked_out_at = ?, status = 'CHECKEDOUT' WHERE checked_out_at IS NULL AND book_id = ? AND hold_by_patron_id = ?",
+        sheets.update(
+                "UPDATE holds_sheet SET checked_out_at = ?, status = 'CHECKEDOUT' WHERE checked_out_at IS NULL AND book_id = ? AND hold_by_patron_id = ?",
                 from(event.getWhen()),
                 event.getBookId(),
                 event.getPatronId());
@@ -171,25 +190,33 @@ class SheetsReadModel implements DailySheet {
         if (results == 0) {
             insertAsReturnedWithCheckedOutEventMissing(event);
         }
-
     }
 
     private int markAsReturned(BookReturned event) {
-        return sheets.update("UPDATE checkouts_sheet SET returned_at = ?, status = 'RETURNED' WHERE returned_at IS NULL AND book_id = ? AND checked_out_by_patron_id = ?",
+        return sheets.update(
+                "UPDATE checkouts_sheet SET returned_at = ?, status = 'RETURNED' WHERE returned_at IS NULL AND book_id = ? AND checked_out_by_patron_id = ?",
                 from(event.getWhen()),
                 event.getBookId(),
                 event.getPatronId());
     }
 
     private void insertAsReturnedWithCheckedOutEventMissing(BookReturned event) {
-        sheets.update("INSERT INTO checkouts_sheet " +
-                        "(book_id, status, checkout_event_id, checked_out_by_patron_id, checked_out_at, checkout_till, returned_at) VALUES " +
-                        "(?, ?, ?, ?, null, null, ?)",
+        sheets.update(
+                """
+                INSERT INTO checkouts_sheet (
+                    book_id,
+                    status,
+                    checkout_event_id,
+                    checked_out_by_patron_id,
+                    checked_out_at,
+                    checkout_till,
+                    returned_at
+                ) VALUES (?, ?, ?, ?, null, null, ?)
+                """,
                 event.getBookId(),
                 "CHECKEDOUT",
                 event.getEventId(),
                 event.getPatronId(),
                 from(event.getWhen()));
     }
-
 }
